[package]
name = "monochange_cli"
version = "0.0.0"
categories = ["development-tools"]
documentation = "https://docs.rs/monochange_core"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = "Unlicense"
repository = "https://github.com/ifiokjr/monochange"
rust-version = "1.67.0"
description = "Manage versions and releases for you multiplatform, multilanguage monorepo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
