[package]
name = "monochange_config"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_config"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "config", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Configuration parsing and validation for monochange"

[dependencies]
doc-comment = { workspace = true }
glob = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
monochange_cargo = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true }
monochange_deno = { workspace = true }
monochange_gitea = { workspace = true }
monochange_github = { workspace = true }
monochange_gitlab = { workspace = true }
monochange_npm = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
tempfile = "3"

[lints]
workspace = true
