[package]
name = "monochange_config"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_config"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "config", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Configuration parsing and validation for monochange"

[dependencies]
doc-comment = { workspace = true, default-features = true }
glob = { workspace = true, default-features = true }
miette = { workspace = true, default-features = true }
minijinja = { workspace = true, default-features = true }
monochange_cargo = { workspace = true }
monochange_core = { workspace = true }
monochange_dart = { workspace = true }
monochange_deno = { workspace = true }
monochange_gitea = { workspace = true }
monochange_github = { workspace = true }
monochange_gitlab = { workspace = true }
monochange_jvm = { workspace = true }
monochange_npm = { workspace = true }
regex = { workspace = true, default-features = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yaml_ng = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
toml = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
monochange_test_helpers = { version = "0.0.0", path = "../../testing/monochange_test_helpers" }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
