[package]
name = "monochange_core"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_core"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[features]
http = ["reqwest"]

[dependencies]
ignore = { workspace = true, default-features = true }
reqwest = { workspace = true, optional = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
