[package]
name = "monochange_dart"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_dart"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["cli", "dart", "flutter", "releases", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Dart and Flutter workspace discovery for monochange"

[dependencies]
glob = { workspace = true, default-features = true }
monochange_core = { workspace = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yaml_ng = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
monochange_config = { workspace = true }
monochange_test_helpers = { workspace = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }

[lints]
workspace = true
