[package]
name = "monochange_deno"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_deno"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["cli", "deno", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Deno workspace and package discovery for monochange"

[dependencies]
glob = { workspace = true, default-features = true }
monochange_core = { workspace = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }

[lints]
workspace = true
