[package]
name = "monochange_gitea"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_gitea"
edition = { workspace = true }
include = { workspace = true }
keywords = ["gitea", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Gitea release payload rendering and publishing for monochange"

[dependencies]
monochange_core = { workspace = true }
monochange_hosting = { version = "0.0.0", path = "../monochange_hosting" }
reqwest = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
urlencoding = { workspace = true, default-features = true }

[dev-dependencies]
etest = { workspace = true, default-features = true }
httpmock = { workspace = true, default-features = true }
insta = { workspace = true, default-features = true }
monochange_test_helpers = { workspace = true }
temp-env = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
