[package]
name = "monochange_github"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_github"
edition = { workspace = true }
include = { workspace = true }
keywords = ["github", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "GitHub release payload rendering and publishing for monochange"

[dependencies]
monochange_core = { workspace = true }
octocrab = { workspace = true, default-features = false }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true }
urlencoding = { workspace = true, default-features = true }

[dev-dependencies]
httpmock = { workspace = true, default-features = true }
temp-env = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
