[package]
name = "monochange_gitlab"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_gitlab"
edition = { workspace = true }
include = { workspace = true }
keywords = ["gitlab", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "GitLab release payload rendering and publishing for monochange"

[dependencies]
monochange_core = { workspace = true }
reqwest = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
urlencoding = { workspace = true, default-features = true }

[dev-dependencies]
httpmock = { workspace = true, default-features = true }
insta = { workspace = true, default-features = true }
temp-env = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
