[package]
name = "monochange_go"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_go"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Go ecosystem adapter for monochange — discovers Go modules and resolves versions from git tags"

[dependencies]
glob = { workspace = true, default-features = true }
monochange_core = { workspace = true }
regex = { workspace = true, default-features = true }
semver = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
monochange_test_helpers = { workspace = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
