[package]
name = "monochange_graph"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_graph"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "graph", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Dependency graph and propagation logic for monochange"

[dependencies]
monochange_core = { workspace = true }
monochange_semver = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }

[lints]
workspace = true
