[package]
name = "monochange_graph"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_graph"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["cli", "graph", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Dependency graph and propagation logic for monochange"

[dependencies]
monochange_core = { workspace = true }
monochange_semver = { workspace = true }
semver = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }

[lints]
workspace = true
