[package]
name = "monochange_hosting"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_hosting"
edition = { workspace = true }
include = { workspace = true }
keywords = ["hosting", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Shared hosting utilities for monochange source providers"

[dependencies]
monochange_core = { workspace = true }
reqwest = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }

[lints]
workspace = true
