[package]
name = "monochange_hosting"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_hosting"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["hosting", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Shared hosting utilities for monochange source providers"

[dependencies]
monochange_core = { workspace = true }
reqwest = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }

[lints]
workspace = true
