[package]
name = "monochange_integration_tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Internal integration tests for monochange crates"

[dev-dependencies]
monochange_core = { workspace = true }
monochange_test_helpers = { workspace = true }
tempfile = { workspace = true, default-features = true }
