[package]
name = "monochange_integration_tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "Internal integration tests for monochange crates"

[dev-dependencies]
insta = { workspace = true, features = ["redactions"], default-features = true }
insta-cmd = { workspace = true, default-features = true }
jsonschema = { workspace = true, default-features = true }
monochange_config = { workspace = true }
monochange_core = { workspace = true }
monochange_forgejo = { workspace = true }
monochange_schema = { workspace = true }
monochange_test_helpers = { workspace = true }
serde_json = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }
toml = { workspace = true, features = ["parse", "serde"], default-features = true }
