[package]
name = "monochange_lint"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
monochange_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, default-features = true }
toml_edit = { workspace = true, features = ["display"] }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
