[package]
name = "monochange_lint"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
monochange_core = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
toml = { workspace = true, default-features = true }
toml_edit = { workspace = true, features = ["display"], default-features = true }
tracing = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }
