[package]
name = "monochange_lint"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Ecosystem-agnostic manifest lint engine for monochange"

[dependencies]
glob = { workspace = true, default-features = true }
monochange_core = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
