[package]
name = "monochange_linting"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Authoring helpers and macros for monochange lint suites"

[dependencies]
monochange_core = { workspace = true }

[lints]
workspace = true
