[package]
name = "monochange_npm"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_npm"
edition = { workspace = true }
include = { workspace = true }
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[dependencies]
glob = { workspace = true }
monochange_core = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }

[lints]
workspace = true
