[package]
name = "monochange_npm"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_npm"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["cli", "changelog", "releases", "versioning", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manage versions and releases for your multiplatform, multilanguage monorepo"

[dependencies]
glob = { workspace = true, default-features = true }
monochange_core = { workspace = true }
monochange_linting = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
semver = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yaml_ng = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
monochange_config = { workspace = true }
monochange_lint_testing = { workspace = true }
monochange_test_helpers = { workspace = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }

[lints]
workspace = true
