[package]
name = "monochange_publish"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/monochange_publish"
edition = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["publish", "trusted-publishing", "releases", "monorepo"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Publishing support and trusted-publishing capabilities for monochange"

[dependencies]
monochange_core = { workspace = true }
reqwest = { workspace = true, features = ["json"], default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["rt-multi-thread"], default-features = true }
tracing = { workspace = true, default-features = true }
urlencoding = { workspace = true, default-features = true }

[lints]
workspace = true
